# django-vue-helper

./: .gitignore  README.md  pyproject.toml  tox.ini
example_vue/: apps.py
example_vue/static_src/: README.md  package-lock.json  package.json  vue.config.js
example_vue/static_src/public/: index.html
test_project/: settings.py  urls.py
test_project/templates/: base.html
test_project/vueapp/: package-lock.json  package.json
vue_helper/: __init__.py  apps.py  context_processors.py  dist.py  exceptions.py  utils.py
vue_helper/templates/vue_helper/: vue_preload_scripts.html  vue_preload_styles.html  vue_scripts.html  vue_styles.html
vue_helper/templatetags/: vue_helper_tags.py
vue_helper/tests/: test_utils.py  test_views.py
